--- a/examples/index.css
+++ b/examples/index.css
@@ -37,6 +37,25 @@ body,
   max-width: 800px;
 }
 
+.header {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.link:active,
+.link:focus,
+.link:hover {
+  outline: none;
+  text-decoration: underline;
+}
+
 .nav {
   display: flex;
   flex-flow: row nowrap;
